--- a/libs/client/landingpage/feature/src/lib/landing/landing.component.html
+++ b/libs/client/landingpage/feature/src/lib/landing/landing.component.html
@@ -59,7 +59,7 @@
   </div>
 
   <div class="tbbio">
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta officiis omnis, labore minus temporibus voluptas provident aut et porro illum quo aperiam maxime modi magnam fugit blanditiis, debitis explicabo. Ipsam!</p>
+    <p>Training Buddy is committed to helping its users develop a fun and consistent exercise routine, in the easiest way possible. Plan ahead and involve your friends with our sophisticated workout scheduling system. Track your progress by logging the activities you have completed, either manually or by linking your Strava account.</p>
   </div>
 
 </div>
