--- a/libs/client/landingpage/feature/src/lib/landing/landing.component.scss
+++ b/libs/client/landingpage/feature/src/lib/landing/landing.component.scss
@@ -293,6 +293,7 @@ mat-card-title{
     min-width: 530px;
     width: 80%;
     max-width: 510px;
+    text-align: justify;
 }
 
 @media (max-width: 1180px) {
