--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.scss
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.scss
@@ -92,5 +92,5 @@ p {
 
 .action-color {
     color: white;
-    background-color: #1b1a1b7c !important;
+    background-color: #06b6d4 !important;
 }
