--- a/libs/client/landingpage/feature/src/lib/landing/landing.component.html
+++ b/libs/client/landingpage/feature/src/lib/landing/landing.component.html
@@ -8,8 +8,8 @@
     Training Buddy provides a secure and user-friendly way for exercise enthusiasts to connect and train with new people. Training Buddies' recomendation engine provides accurate and helpful suggestions of new training buddies.
   </div>
   <div id="linksbuttons">
-    <button mat-raised-button class="login">Log In</button>
-    <button mat-raised-button class="signup">Sign Up</button>
+    <button mat-raised-button class="login" routerLink="/login">Log In</button>
+    <button mat-raised-button class="signup" routerLink="/signup">Sign Up</button>
   </div>
 </div>
 
