💄 ADD LOGO TO PROFILE

--- a/libs/client/shared/components/navbar/ui/src/lib/settingsnavbar/settingsnavbar.component.html
+++ b/libs/client/shared/components/navbar/ui/src/lib/settingsnavbar/settingsnavbar.component.html
@@ -4,7 +4,7 @@
 
       <mat-toolbar-row>
 
-        <span>Training-Buddy</span>
+        <training-buddy-logo id="logo"></training-buddy-logo>
 
         <!-- <span class="example-spacer"></span> -->
         <!-- <training-buddy-logo id="logo"></training-buddy-logo> -->
