--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
@@ -25,7 +25,7 @@
                                     </div>
                                 </div>
                                 <div class="tracking-wide text-xs font-semibold">{{ usr.location }}</div>
-                                <p class="mt-2 text-slate-500">{{ usr.bio }}</p>
+                                <p class="mt-2 text-slate-500 wraptext">{{ usr.bio }}</p>
                                 <p class="mt-2 text-slate-500">{{ getSportString(usr) }}</p>
                             </div>
                         </div>
