--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.scss
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.scss
@@ -7,6 +7,10 @@
     text-decoration: underline !important;
 }
 
+.wraptext {
+    text-align: justify;
+}
+
 mat-card {
     max-width: 600px;
     width: 90vw;
