--- a/libs/client/schedule/feature/src/lib/complete-workout/complete-workout.component.html
+++ b/libs/client/schedule/feature/src/lib/complete-workout/complete-workout.component.html
@@ -10,8 +10,8 @@
           <svg  id="stravaLogo" xmlns="http://www.w3.org/2000/svg" aria-label="Strava" viewBox="0 0 512 512"><path fill="#FC4C02" d="M120 288L232 56l112 232h-72l-40-96-40 96z"/><path fill="#fda580" d="M280 288l32 72 32-72h48l-80 168-80-168z"/></svg>
         </div>
         <div class="w-3/4 flex flex-col space-y-3">
-          <button (click)="completeWorkout()" mat-raised-button color="primary" class="p-3 m-8 text-lg bg-black rounded-xl text-white" >Yes</button>
-          <button (click)="addActivity()" mat-raised-button color="primary" class="p-3 m-8 text-lg bg-black rounded-xl text-white" > No</button>
+          <button (click)="completeWorkout()" mat-raised-button id="action"  class="p-3 m-8 text-lg rounded-xl " >Yes</button>
+          <button (click)="addActivity()" mat-raised-button  class="p-3 m-8 text-lg  rounded-xl" > No</button>
         </div>
       </div>
     </div>
