--- a/libs/client/scheduleworkout/feature/src/lib/scheduleworkout/scheduleworkout.component.scss
+++ b/libs/client/scheduleworkout/feature/src/lib/scheduleworkout/scheduleworkout.component.scss
@@ -29,7 +29,7 @@ mat-form-field {
 
 #submit {
     width: 100%;
-    background-color: #1b1a1b !important;
+    background-color: #06b6d4 !important;
 }
 
 ::ng-deep .mat-form-field-wrapper {
