--- a/libs/client/addmanualactivity/feature/src/lib/addmanualactivity/addmanualactivity.component.scss
+++ b/libs/client/addmanualactivity/feature/src/lib/addmanualactivity/addmanualactivity.component.scss
@@ -30,7 +30,7 @@ mat-form-field {
 
 #signup {
     width: 100%;
-    background-color: #1b1a1b !important;
+    background-color: #06b6d4 !important;
 }
 
 .logIn {
