--- a/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
+++ b/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.html
@@ -15,7 +15,7 @@
                                   <h3> rating: {{ displayUser?.rating }}</h3>
                                 </ng-container>
                                 <ng-container *ngIf="!checkRating(displayUser?.rating)">
-                                  <h3> new user </h3>
+                                  <h3> new user✨</h3>
                                 </ng-container>
 
                                 <h3>{{ displayUser?.location }}</h3>
