--- a/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.scss
+++ b/libs/client/viewprofile/feature/src/lib/viewprofilepage/viewprofilepage.component.scss
@@ -24,7 +24,7 @@
 }
 
 #container {
-    max-width: 400px;
+    max-width: 500px;
     width: 100%;
     margin: 2em auto;
     background-color: rgba(255, 255, 255, 1);
@@ -147,8 +147,8 @@ h2 {
 
 .buddypic {
     background-color: rgba(27, 26, 27, 0.075);
-    height: 75px;
-    width: 75px;
+    height: 75px !important;
+    width: 75px !important;
     border-radius: 50%;
     background-size: cover;
     background-repeat: no-repeat;
