--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.scss
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.scss
@@ -7,8 +7,8 @@
     text-decoration: underline !important;
 }
 
-.wraptext {
-    text-align: justify;
+#textwrap {
+    overflow-wrap: break-word;
 }
 
 mat-card {
