--- a/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
+++ b/libs/client/dashboard/feature/src/lib/dashboard/dashboard.component.html
@@ -67,10 +67,31 @@
                             <div class="mb-2 px-4 pb-4 pt-2 mt-2 card-c ucard">
                                 <div>
                                     <div class="acceptTitle">
-                                        <p class="block mt-1 text-2xl leading-tight font-medium text-black" routerLink="/profile/{{usr.id}}">{{ usr.userName }} {{ usr.userSurname }}</p>
-    
+
+                                        
+                                        <div class="chips col">
+                                            <p class="mr-3 block mt-1 text-2xl leading-tight font-medium text-black" routerLink="/profile/{{usr.id}}">{{ usr.userName }} {{ usr.userSurname }}</p>
+                                            <div class="row">
+                                                <div *ngIf="usr.metrics.run" class="chip mrchip">
+                                                    <img src="https://img.icons8.com/ios/50/000000/running.png">
+                                                </div>
+                                                <div *ngIf="usr.metrics.ride" class="chip mrchip">
+                                                    <img src="https://img.icons8.com/ios-filled/50/000000/bicycle.png">
+                                                </div>
+                                                <div *ngIf="usr.metrics.swim" class="chip mrchip">
+                                                    <img src="https://img.icons8.com/ios/50/000000/swimming.png">
+                                                </div>
+                                                <div *ngIf="usr.metrics.lift" class="chip">
+                                                    <img src="https://img.icons8.com/ios/50/000000/dumbbell--v1.png">
+                                                </div>
+                                            </div>
+                                        </div>
+
                                     </div>
                                     <div class="tracking-wide text-xs font-semibold">{{ usr.location }}</div>
+
+                                    
+
                                     <div class="mt-2 text-slate-500" id="textwrap">{{ usr.bio }}</div>
                                 </div>
 
