--- a/libs/client/shared/components/navbar/ui/src/lib/backnavbar/backnavbar.component.html
+++ b/libs/client/shared/components/navbar/ui/src/lib/backnavbar/backnavbar.component.html
@@ -7,7 +7,8 @@
         <mat-icon class="icon" (click)="back()">arrow_back_ios</mat-icon>
 
         <div class="titleblock">
-            <h1>{{ title }}</h1>
+            <!-- <h1>{{ title }}</h1> -->
+            <training-buddy-logo height="45"></training-buddy-logo>
         </div>
 
       </mat-toolbar-row>
